@@ -1,3 +1,8 @@
+2004-11-29  Roger Sayle  <roger@eyesopen.com>
+
+	PR rtl-optimization/9771
+	* gcc.dg/pr9771-1.c: New test case.
+
 2004-11-27  Falk Hueffner  <falk@debian.org>
 
 	* gcc.dg/loop-6.c: New test.
